fix alignment

--- a/src/components/RecipeCard/RecipeCard.css
+++ b/src/components/RecipeCard/RecipeCard.css
@@ -1,6 +1,7 @@
 .recipe-list {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding-top: 3%;
     gap: 16px; /* Adjust the gap between rows as needed */
   }
